--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -17,6 +17,7 @@
     "@nuxt/scripts": "0.11.5",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
+    "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.0.0",
