--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.5",
+    "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
     "@vueuse/core": "^13.1.0",
