--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,15 +1,29 @@
 services:
   app:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
       target: prod
     restart: unless-stopped
     ports:
       - ${PORT}:${PORT}
     environment:
+      dev: ${dev}
       APP_ENV: ${APP_ENV}
       PORT: ${PORT}
+      BLUEPRINT_DB_URL: ${BLUEPRINT_DB_URL}
+    volumes:
+      - sqlite_bp:/app/db
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    ports:
+      - ${FRONTEND_PORT}:${FRONTEND_PORT}
+    environment:
+      APP_ENV: ${APP_ENV}
+      PORT: ${FRONTEND_PORT}
       BLUEPRINT_DB_URL: ${BLUEPRINT_DB_URL}
     volumes:
       - sqlite_bp:/app/db
