Add command line options for threads and tick interval
Fix database path, refactor Makefile, and improve Dockerfile

Body paths now correctly use the executable's directory, production builds
are properly organized, and Docker image is more efficient.

--- a/server/backend/Dockerfile
+++ b/server/backend/Dockerfile
@@ -1,20 +1,16 @@
 FROM golang:1.24.2-alpine AS build
 
-RUN apk add --no-cache alpine-sdk
+RUN apk add --no-cache alpine-sdk make
 
 WORKDIR /app
 
-COPY go.sum ./
-COPY go.mod ./
+COPY go.sum go.mod Makefile ./
 RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o main cmd/api/main.go
-
-RUN for file in $(find ./protocols -name '*.go' ! -name 'protocols.go'); do \
-    go build -buildmode=plugin -o "protocols/$(basename ${file%.go}.so)" "$file"; \
-done
+RUN make build-prod
+RUN make build-plugins-prod
 
 FROM alpine:3.20.1 AS prod
 
@@ -22,10 +18,10 @@ WORKDIR /app
 
 RUN apk add --no-cache libc6-compat
 
-COPY --from=build /app/main /app/main
+COPY --from=build /app/bin/serverbackend /app/main
 COPY --from=build /app/protocols /app/protocols
 
-RUN mkdir -p ./internal/database && touch ./internal/database/cookiefarm.db
+RUN touch ./cookiefarm.db
 
 EXPOSE ${PORT}
 
