--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,8 +30,11 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
