Add `run-prod` target to client Makefile and update server Makefile
- Added `run-prod` target to client Makefile for production builds.
- Updated server Makefile to include `tailwindcss-build` in relevant targets.
- Removed unused `test` target from server Makefile.

--- a/client/Makefile
+++ b/client/Makefile
@@ -52,6 +52,10 @@ run: build
 	@echo -e "$(CYAN)[*] Running $(BOLD)...$(RESET)"
 	@$(BIN_DIR)/$(BINARY_NAME) $(ARGS)
 
+run-prod: build-prod
+	@echo -e "$(CYAN)[*] Running $(BOLD)...$(RESET)"
+	@$(BIN_DIR)/$(BINARY_NAME) $(ARGS)
+
 version:
 	@echo -e "$(GREEN)[+] Version $(BINARY_NAME) v$(VERSION) $(RESET)"
 
