Improve build process with JS minification and asset management
Add some minor changes and refactor setup.sh

--- a/server/.air.toml
+++ b/server/.air.toml
@@ -6,7 +6,7 @@ tmp_dir = "tmp"
 exclude_dir = ["tmp", "vendor", "testdata", "node_modules"]
 args_bin = []
 bin = "./bin/serverbackend --debug"
-cmd = "make build"
+cmd = "make minify; make build"
 delay = 1000
 exclude_file = []
 exclude_regex = ["_test.go"]
