Add pagination and flag table to dashboard

--- a/server/.air.toml
+++ b/server/.air.toml
@@ -8,7 +8,7 @@ args_bin = []
 bin = "./bin/serverbackend --debug"
 cmd = "make minify; make build"
 delay = 1000
-exclude_file = []
+exclude_file = ["public/js/output.min.js"]
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
