Refactor pagination and flag handling
- Added dynamic pagination with improved UI/UX.
- Updated database methods to handle errors and batch inserts.
- Enhanced table rendering with HTMX for asynchronous updates.
- Introduced utility functions for pagination logic.
- Improved CSS for better styling and responsiveness.

--- a/server/Makefile
+++ b/server/Makefile
@@ -90,10 +90,10 @@ clean:
 	@echo -e "$(GREEN)[+] Clean complete!$(RESET)"
 
 tailwindcss-build:
-	./tailwindcss -i ./assets/css/global.css -o ./public/css/output.css --minify
+	./tools/tailwindcss -i ./assets/css/global.css -o ./public/css/output.css --minify
 
 tailwindcss-watch:
-	./tailwindcss -i ./assets/css/global.css -o ./public/css/output.css --watch
+	./tools/tailwindcss -i ./assets/css/global.css -o ./public/css/output.css --watch
 
 watch:
 	@if command -v air > /dev/null; then \
