--- a/server/Makefile
+++ b/server/Makefile
@@ -2,7 +2,7 @@ BIN_DIR := ./bin
 CMD_DIR := ./cmd/api
 LOGS_DIR := ./logs
 MAIN_FILE := main.go
-BINARY_NAME := serverbackend
+BINARY_NAME := cookieserver
 VERSION := 1.0.0
 GOOS ?= linux
 GOARCH ?= amd64
