Add profiling support and optimize database operations
- Integrated Pyroscope for application profiling in debug mode.
- Improved database query efficiency by replacing loops with batch inserts.
- Added sync.Pool for JSON parsing and flag handling to reduce allocations.
- Updated static file serving with compression and caching.
- Removed embedded templates in favor of disk-based templates.
- Fixed UI bug displaying service port in flags table.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -20,6 +20,7 @@ RUN apk add --no-cache libc6-compat
 
 COPY --from=build /app/bin/cookieserver /app/main
 COPY --from=build /app/protocols /app/protocols
+COPY --from=build /app/internal/ui/views /app/internal/ui/views
 
 RUN touch ./cookiefarm.db
 
