--- a/server/Makefile
+++ b/server/Makefile
@@ -35,7 +35,7 @@ help:
 build:
 	@echo -e "$(CYAN)[*] Building $(BOLD)...$(RESET)"
 	@mkdir -p $(BIN_DIR)
-	@go build -o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
+	@go build -gcflags='github.com/ByteTheCookies/cookieserver/...="-m"' -o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
 	@echo -e "$(GREEN)[+] Build complete!$(RESET)"
 
 build-plugins-prod:
@@ -51,7 +51,7 @@ build-plugins:
 	@for file in $$(find ./protocols -name '*.go' ! -name 'protocols.go'); do \
 		filename=$$(basename $$file); \
 		pluginname=$${filename%.go}; \
-		go build -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
+		go build -gcflags -m -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
 		echo -e "$(GREEN)[+] Plugin $$pluginname.so built!$(RESET)"; \
 	done
 
