--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       PASSWORD: ${PASSWORD}
       CONFIG_FROM_FILE: ${CONFIG_FROM_FILE}
       PORT: ${BACKEND_PORT}
+      DEBUG: ${DEBUG}
     volumes:
       - sqlite_bp:/app/database
 
