Improve flag handling and update configuration
- Deduplicate flags in HandlePostFlags to ensure uniqueness.
- Add ON CONFLICT handling in database insert to avoid duplicate entries.
- Update server configuration values for host, timeouts, and batch size.
- Fix variable naming in cc_http protocol for clarity.

--- a/server/config.yml
+++ b/server/config.yml
@@ -1,14 +1,15 @@
+
 configured: true
 
 server:
-  host_flagchecker: "localhost:5001"
+  host_flagchecker: "192.168.1.1:8080"
   team_token: "4242424242424242424"
-  submit_flag_checker_time: 60
+  submit_flag_checker_time: 120
   max_flag_batch_size: 1000
   protocol: "cc_http"
 
 client:
-  submit_flag_server_time: 20
+  submit_flag_server_time: 120
   services:
     - name: "CookieService"
       port: 8081
