Add vulnify service

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -5,180 +5,48 @@ services:
     networks:
       net:
         ipv4_address: 10.10.0.1
+  vulnify0:
+    build:
+      context: ./vulnify
+    networks:
+      net:
+        ipv4_address: 10.10.4.1
   service1:
     build:
       context: ./app
     networks:
       net:
         ipv4_address: 10.10.1.1
+  vulnify1:
+    build:
+      context: ./vulnify
+    networks:
+      net:
+        ipv4_address: 10.10.5.1
   service2:
     build:
       context: ./app
     networks:
       net:
         ipv4_address: 10.10.2.1
+  vulnify2:
+    build:
+      context: ./vulnify
+    networks:
+      net:
+        ipv4_address: 10.10.6.1
   service3:
     build:
       context: ./app
     networks:
       net:
         ipv4_address: 10.10.3.1
-  service4:
+  vulnify3:
     build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.4.1
-  service5:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.5.1
-  service6:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.6.1
-  service7:
-    build:
-      context: ./app
+      context: ./vulnify
     networks:
       net:
         ipv4_address: 10.10.7.1
-  service8:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.8.1
-  service9:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.9.1
-  service10:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.10.1
-  service11:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.11.1
-  service12:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.12.1
-  service13:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.13.1
-  service14:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.14.1
-  service15:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.15.1
-  service16:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.16.1
-  service17:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.17.1
-  service18:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.18.1
-  service19:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.19.1
-  service20:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.20.1
-  service21:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.21.1
-  service22:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.22.1
-  service23:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.23.1
-  service24:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.24.1
-  service25:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.25.1
-  service26:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.26.1
-  service27:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.27.1
-  service28:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.28.1
-  service29:
-    build:
-      context: ./app
-    networks:
-      net:
-        ipv4_address: 10.10.29.1
 
 networks:
   net:
