--- a/server/config.yml
+++ b/server/config.yml
@@ -1,19 +1,22 @@
-
 configured: true
 
 server:
-  host_flagchecker: "192.168.1.1:8080"
+  host_flagchecker: "localhost:5001"
   team_token: "4242424242424242424"
-  submit_flag_checker_time: 120
+  submit_flag_checker_time: 30
   max_flag_batch_size: 1000
   protocol: "cc_http"
 
 client:
-  submit_flag_server_time: 120
+  submit_flag_server_time: 30
   services:
     - name: "CookieService"
       port: 8081
-  range_ip_teams: 29
+    - name: "vulnify"
+      port: 1337
+    - name: "app-nc"
+      port: 1338
+  range_ip_teams: 89
   format_ip_teams: "10.10.{}.1"
   my_team_ip: "10.10.0.1"
   regex_flag: "[A-Z0-9]{31}="
