Add golangci-lint config and improve Go tooling
- Introduced `.golangci.yml` for linting configuration.
- Added `lint` and `fmt` targets to the Makefile.
- Enabled race detection in Go builds.
- Updated Go dependencies in `go.mod` and `go.sum`.
- Refactored code for consistency and readability.

(server part)

--- a/server/Makefile
+++ b/server/Makefile
@@ -30,6 +30,8 @@ help:
 	@echo -e "  $(CYAN)make tailwindcss-build$(RESET)     - Build Tailwind CSS minified"
 	@echo -e "  $(CYAN)make tailwindcss-watch$(RESET)     - Tailwind CSS watch"
 	@echo -e "  $(CYAN)make minify$(RESET)    - Minify the JS files"
+	@echo -e "  $(CYAN)make lint$(RESET)      - Lint the Go files"
+	@echo -e "  $(CYAN)make fmt$(RESET)       - Format the Go files"
 	@echo -e "  $(CYAN)make help$(RESET)      - Show this message"
 
 build:
@@ -51,7 +53,7 @@ build-plugins:
 	@for file in $$(find ./protocols -name '*.go' ! -name 'protocols.go'); do \
 		filename=$$(basename $$file); \
 		pluginname=$${filename%.go}; \
-		go build -gcflags -m -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
+		go build -race -gcflags -m -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
 		echo -e "$(GREEN)[+] Plugin $$pluginname.so built!$(RESET)"; \
 	done
 
@@ -60,6 +62,7 @@ build-prod:
 	@mkdir -p $(BIN_DIR)
 	GOOS=$(GOOS) GOARCH=$(GOARCH) \
 		go build \
+		-race   \
 		-trimpath \
 		-ldflags="-s -w" \
 		-o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
@@ -115,3 +118,26 @@ minify:
 	@echo -e "$(CYAN)[*] Minifying $(BOLD)...$(RESET)"
 	@uglifyjs assets/js/*.js -o public/js/output.min.js -c -m
 	@echo -e "$(GREEN)[+] Minification complete!$(RESET)"
+
+
+lint:
+	@echo -e "$(CYAN)[*] Linting $(BOLD)...$(RESET)"
+	@if ! golangci-lint run; then \
+		echo -e "$(RED)[!] Linting failed!$(RESET)"; \
+		exit 1; \
+	fi
+	@echo -e "$(GREEN)[+] Linting complete!$(RESET)"
+
+fmt: ## run gofumpt (if present) or gofmt
+	@if command -v gofumpt > /dev/null; then \
+		if ! gofumpt -w -d .; then \
+			echo -e "$(RED)[!] Formatting with gofumpt failed!$(RESET)"; \
+			exit 1; \
+		fi; \
+	else \
+		if ! go list -f {{.Dir}} ./... | xargs gofmt -w -s -d; then \
+			echo -e "$(RED)[!] Formatting with gofmt failed!$(RESET)"; \
+			exit 1; \
+		fi; \
+	fi
+	@echo -e "$(GREEN)[+] Formatting complete!$(RESET)"
