--- a/server/Makefile
+++ b/server/Makefile
@@ -37,7 +37,7 @@ help:
 build:
 	@echo -e "$(CYAN)[*] Building $(BOLD)...$(RESET)"
 	@mkdir -p $(BIN_DIR)
-	@go build -gcflags='github.com/ByteTheCookies/cookieserver/...="-m"' -o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
+	@go build -i -gcflags='github.com/ByteTheCookies/cookieserver/...="-m"' -o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
 	@echo -e "$(GREEN)[+] Build complete!$(RESET)"
 
 build-plugins-prod:
@@ -53,7 +53,7 @@ build-plugins:
 	@for file in $$(find ./protocols -name '*.go' ! -name 'protocols.go'); do \
 		filename=$$(basename $$file); \
 		pluginname=$${filename%.go}; \
-		go build -race -gcflags -m -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
+		go build -i -race -gcflags -m -buildmode=plugin -o "protocols/$$pluginname.so" "$$file"; \
 		echo -e "$(GREEN)[+] Plugin $$pluginname.so built!$(RESET)"; \
 	done
 
@@ -63,6 +63,7 @@ build-prod:
 	GOOS=$(GOOS) GOARCH=$(GOARCH) \
 		go build \
 		-race   \
+		-i      \
 		-trimpath \
 		-ldflags="-s -w" \
 		-o $(BIN_DIR)/$(BINARY_NAME) $(CMD_DIR)/$(MAIN_FILE)
@@ -86,10 +87,10 @@ version:
 
 clean:
 	@echo -e "$(YELLOW)[*] Cleaning binaries and db...$(RESET)"
-	@rm -rf $(BIN_DIR)/*
+	@if [ -d $(BIN_DIR) ]; then rm -rf $(BIN_DIR)/*; fi
 	@echo -e "$(GREEN)[+] Clean complete!$(RESET)"
 	@echo -e "$(YELLOW)[*] Cleaning logs...$(RESET)"
-	@rm -rf $(LOGS_DIR)/*
+	@if [ -d $(LOGS_DIR) ]; then rm -rf $(LOGS_DIR)/*; fi
 	@echo -e "$(GREEN)[+] Clean complete!$(RESET)"
 
 tailwindcss-build:
