--- a/tests/vulnify/Makefile
+++ b/tests/vulnify/Makefile
@@ -2,5 +2,5 @@ build: vulnify.c
 	gcc -o vulnify -pie -fstack-protector vulnify.c && strip -s vulnify
 
 debug: vulnify.c
-	gcc -o vulnify -Wall -Wextra -Werror vulnify.c
+	gcc -o vulnify -Wno-format-truncation -Wall -Wextra -Werror vulnify.c
 
