--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -14,6 +14,17 @@ services:
       DEBUG: ${DEBUG}
     volumes:
       - sqlite_bp:/app/database
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - app
 
 volumes:
   sqlite_bp:
