--- a/server/frontend/Dockerfile
+++ b/server/frontend/Dockerfile
@@ -1,48 +1,37 @@
-# Dockerfile for Next.js Frontend Application
 FROM oven/bun:1.1.38-alpine AS base
 
-# Install dependencies only when needed
 FROM base AS deps
 WORKDIR /app
 
-# Copy package files
 COPY package.json bun.lock* ./
 
-# Install dependencies
 RUN bun install --frozen-lockfile
 
-# Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
 
-# Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
 
-# Copy source code
 COPY . .
 
-# Build the application
+ENV NEXT_TELEMETRY_DISABLED=1
+
 RUN bun run build
 
-# Production image, copy all the files and run next
 FROM base AS runner
 WORKDIR /app
 
-# Set to production environment
 ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
-# Don't run as root
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy the public folder
 COPY --from=builder /app/public ./public
 
-# Set the correct permission for prerender cache
 RUN mkdir .next
 RUN chown nextjs:nodejs .next
 
-# Automatically leverage output traces to reduce image size
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
