--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,6 +30,6 @@ RUN touch ./cookiefarm.db
 EXPOSE ${BACKEND_PORT}
 
 COPY run.sh run.sh
-RUN chmod +x ./run.sh
+RUN chmod +x run.sh
 
-ENTRYPOINT ["./run.sh"]
+ENTRYPOINT ["/bin/bash","run.sh"]
