Fix Docker configuration for cross-platform compatibility
- Add dos2unix to fix line ending issues
- Use ENTRYPOINT instead of CMD for more reliable execution
- Improve run.sh argument handling
- Configure explicit network in docker-compose
- Standardize on PORT environment variable

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,7 +17,7 @@ FROM alpine:3.20.1 AS prod
 
 WORKDIR /app
 
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat dos2unix
 
 COPY --from=build /app/bin/cookieserver /app/bin/cookieserver
 COPY --from=build /app/public /app/public
@@ -27,9 +27,9 @@ COPY --from=build /app/internal/ui/views /app/internal/ui/views
 
 RUN touch ./cookiefarm.db
 
-EXPOSE ${BACKEND_PORT}
-
 COPY run.sh run.sh
-RUN chmod +x run.sh
+RUN dos2unix run.sh && chmod +x run.sh
 
-CMD ["/bin/sh","run.sh"]
+EXPOSE ${PORT}
+
+ENTRYPOINT ["/bin/sh", "/app/run.sh"]
