--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,19 +16,19 @@ services:
       - sqlite_bp:/app/database
     networks:
       - cookiefarm-network
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      - app
-    networks:
-      - cookiefarm-network
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   restart: unless-stopped
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - NODE_ENV=production
+  #   depends_on:
+  #     - app
+  #   networks:
+  #     - cookiefarm-network
 
 volumes:
   sqlite_bp:
